--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>studio-components-dependencies</artifactId>
 	<packaging>pom</packaging>
 	<properties>
-		<components.version>0.19.2</components.version>
+		<components.version>0.19-SNAPSHOT</components.version>
 	</properties>
 	<repositories>
 		<repository>
