--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>components-marketo-runtime</artifactId>
 			<version>${components.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.talend.components</groupId>
+			<artifactId>components-google-drive-runtime</artifactId>
+			<version>${components.version}</version>
+		</dependency>
         <dependency>
             <groupId>org.talend.components</groupId>
             <artifactId>components-common</artifactId>
