--- a/main/plugins/org.talend.designer.maven.tos/resources/tcompv1/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/tcompv1/pom.xml
@@ -13,7 +13,7 @@
 
   <properties>
     <tcomp.version>1.0.0-SNAPSHOT</tcomp.version>
-    <tcomp-api.version>1.0.0-SNAPSHOT</tcomp.version>
+    <tcomp-api.version>1.0.0-SNAPSHOT</tcomp-api.version>
     <slf4j.version>1.7.25</slf4j.version>
   </properties>
   <repositories>
