fix(TDI-40627): S3/DynamoDB/Salesforce/Marklogic/GoogleDrive: httpcore-4.4.3, json-20140107, javaxmail and httpclient-4.5.4 missing(#1772)

--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -35,6 +35,16 @@
 		</repository>
 	</repositories>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>1.6.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.talend.components</groupId>
