--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -42,6 +42,11 @@
                 <artifactId>javax.mail</artifactId>
                 <version>1.6.0</version>
             </dependency>
+			<dependency>
+                <groupId>org.json</groupId>
+                <artifactId>json</artifactId>
+                <version>20140107</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
