--- a/main/plugins/org.talend.designer.maven.tos/resources/surefire/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/surefire/pom.xml
@@ -31,6 +31,11 @@
 			<version>4.2.6</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.6</version>
+		</dependency>
+		<dependency>
 			<groupId>org.eclipse.tycho</groupId>
 			<artifactId>tycho-compiler-jdt</artifactId>
 			<version>1.0.0</version>
@@ -39,6 +44,11 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-resources-plugin</artifactId>
             <version>2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
 	</dependencies>
 	<build>
