fix(TDI-41336): Add com bom pom to maven.tos dependencies (#2000)

--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -52,6 +52,13 @@
                 <artifactId>jackson-dataformat-cbor</artifactId>
                 <version>2.9.5</version>
             </dependency>
+            <dependency>
+                <groupId>org.talend.components</groupId>
+                <artifactId>components-bom</artifactId>
+                <version>${components.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
