--- a/main/plugins/org.talend.designer.maven.tos/resources/surefire/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/surefire/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-deploy-plugin</artifactId>
+            <version>2.7</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
