chore(TDQ-16229): add assertj-core into testutils (#2073)

--- a/test/plugins/org.talend.testutils/build.properties
+++ b/test/plugins/org.talend.testutils/build.properties
@@ -14,4 +14,5 @@ bin.includes = META-INF/,\
                lib/powermock-classloading-base-1.6.5.jar,\
                lib/powermock-classloading-xstream-1.6.5.jar,\
                lib/xstream-1.4.9.jar,\
-               lib/xpp3-1.1.4c.jar
+               lib/xpp3-1.1.4c.jar,\
+               lib/assertj-core-3.0.0.jar
