Cmeng/feat/tup 21119 cleanup features (#2077)
* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

enable install updatesite menu

* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

remove org.eclipse.core.filesystem.java7

* feat(TUP-21119): Cleanup features, each plugin must be in one unique feature\ncmeng/feat/TUP-21119-Cleanup_features

* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

org.talend.test.tos.feature is never used

* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

revert changes of jxplorer due to license problem

* feat(TUP-21119): Cleanup features, each plugin must be in one unique
feature
https://jira.talendforge.org/browse/TUP-21119

move dependencies

* Revert "feat(TUP-21119): Cleanup features, each plugin must be in one unique feature https://jira.talendforge.org/browse/TUP-21119"

This reverts commit a6ea88fdbbe25b1a6cd16d58e4601432be15a30d.

--- a/main/features/org.talend.fragment.jars.common.feature/.project
+++ b/main/features/org.talend.fragment.jars.common.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.talend.test.tos.feature</name>
+	<name>org.talend.fragment.jars.common.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
