--- a/main/plugins/org.talend.repository.metadata/build.properties
+++ b/main/plugins/org.talend.repository.metadata/build.properties
@@ -5,3 +5,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                plugin.properties,\
                icons/
+jars.extra.classpath = platform:/plugin/org.talend.libraries.jexcel.jars/lib/jxl-wizard.jar,\
+                       platform:/plugin/org.talend.libraries.jexcel.jars/lib/jxl.jar,\
+                       platform:/plugin/org.talend.libraries.jxplorer/lib/jxplorer.jar
