--- a/main/plugins/org.talend.designer.maven.aether/.classpath
+++ b/main/plugins/org.talend.designer.maven.aether/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/aether-connector-basic-1.1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/maven-aether-provider-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/maven-model-3.2.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/maven-model-builder-3.2.1.jar"/>
