TMDM-13127 Add xml-apis.jar and xercesImpl.jar to resolve problem that can not found class 'SAXParser' and 'XMLSerializer' when import into/export from mdm server in mdm studio.

--- a/main/plugins/org.talend.libraries.apache/build.properties
+++ b/main/plugins/org.talend.libraries.apache/build.properties
@@ -2,7 +2,9 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                licences/,\
-               lib/
+               lib/,\
+               lib/xercesImpl.jar,\
+               lib/xml-apis.jar
 bin.excludes = libs_not_used/commons-betwixt-0.8.jar,\
                libs_not_used/commons-digester-1.7.jar,\
                libs_not_used/commons-discovery-0.2.jar,\
