--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -154,10 +154,11 @@
         </dependency>
         <!-- Dependencies in provided scope should be explicitly added as dependency in this module,
             because provided scope is not transitive -->
-        <dependency>
-            <groupId>biz.aQute.bnd</groupId>
-            <artifactId>annotation</artifactId>
-            <version>2.4.0</version>
+		<dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.service.component.annotations</artifactId>
+            <version>1.3.0</version>
+            <scope>compile</scope>
         </dependency>
 		<dependency>
 			<groupId>org.eclipse.sisu</groupId>
