--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -52,6 +52,13 @@
                 <artifactId>jackson-dataformat-cbor</artifactId>
                 <version>2.9.5</version>
             </dependency>
+            <!-- Required by commons-lang-2.6.pom -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-parent</artifactId>
+                <version>17</version>
+                <type>pom</type>
+            </dependency>             
             <!-- It fixes provided dependency scope to compile, because maven-dependency-plugin is setup to include
              only compile and runtime scopes, but provided is also required. It's not possible to setup plugin to
              include all: compile, runtime and provided dependencies -->
