fix(TUP-21657):There is NPE error after starting studio (#2319)

--- a/main/plugins/org.talend.librariesmanager/build.properties
+++ b/main/plugins/org.talend.librariesmanager/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                resources/,\
                plugin.properties,\
                model/,\
-               templates/
+               templates/,\
+               distribution/license.json
