--- a/main/plugins/org.talend.designer.maven.tos/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/pom.xml
@@ -64,6 +64,12 @@
 			<version>${project.version}</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.talend.studio</groupId>
+			<artifactId>talend-compiler-plugin-tos</artifactId>
+			<version>${project.version}</version>
+			<type>pom</type>
+		</dependency>
         <dependency>
             <groupId>org.talend.studio</groupId>
             <artifactId>studio-maven-repository-zip</artifactId>
