--- a/main/plugins/org.talend.designer.maven.tos/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/pom.xml
@@ -76,6 +76,12 @@
             <version>${project.version}</version>
             <type>pom</type>
         </dependency>
+        <dependency>        
+            <groupId>org.talend.studio</groupId>
+            <artifactId>build-helper-maven-plugin-3-0-0-tos</artifactId>
+            <version>${project.version}</version>
+            <type>pom</type>
+        </dependency>
 	</dependencies>
 	<profiles>
 		<profile>
