Kwang/tup 22672 upgrade jars for powermock (#2361)
* TUP-22672 upgrade jars for powermock after running Junit cases with
java11

* TUP-22672 upgrade jars for powermock after running Junit cases with
java11 -- org.talend.metadata.managment.test

* TUP-22672 add classmexer:

--- a/test/plugins/org.talend.testutils/build.properties
+++ b/test/plugins/org.talend.testutils/build.properties
@@ -3,16 +3,17 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                lib/,\
-               lib/cglib-nodep-2.2.2.jar,\
-               lib/javassist-3.20.0-GA.jar,\
-               lib/mockito-core-1.10.19.jar,\
-               lib/objenesis-2.2.jar,\
-               lib/powermock-mockito-1.6.5-full.jar,\
-               lib/powermock-api-mockito-common-1.6.5.jar,\
-               lib/powermock-module-junit4-rule-1.6.5.jar,\
+               plugin.xml,\
+               lib/assertj-core-3.5.2.jar,\
+               lib/byte-buddy-1.9.10.jar,\
+               lib/byte-buddy-agent-1.9.10.jar,\
                lib/classmexer-0.0.3.1.jar,\
-               lib/powermock-classloading-base-1.6.5.jar,\
-               lib/powermock-classloading-xstream-1.6.5.jar,\
-               lib/xstream-1.4.9.jar,\
-               lib/xpp3-1.1.4c.jar,\
-               lib/assertj-core-3.0.0.jar
+               lib/javassist-3.24.0-GA.jar,\
+               lib/mockito-core-2.23.4.jar,\
+               lib/objenesis-2.6.jar,\
+               lib/powermock-api-mockito2-2.0.0.jar,\
+               lib/powermock-api-support-2.0.0.jar,\
+               lib/powermock-core-2.0.0.jar,\
+               lib/powermock-module-junit4-2.0.0.jar,\
+               lib/powermock-module-junit4-common-2.0.0.jar,\
+               lib/powermock-reflect-2.0.0.jar
