--- a/test/plugins/org.talend.testutils/.classpath
+++ b/test/plugins/org.talend.testutils/.classpath
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/assertj-core-3.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/xpp3-1.1.4c.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/assertj-core-3.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/byte-buddy-1.9.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/byte-buddy-agent-1.9.10.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/classmexer-0.0.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javassist-3.24.0-GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mockito-core-2.23.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/objenesis-2.6.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/powermock-api-mockito2-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/powermock-api-support-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/powermock-core-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/powermock-module-junit4-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/powermock-module-junit4-common-2.0.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/powermock-reflect-2.0.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry exported="true" kind="lib" path="lib/cglib-nodep-2.2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/mockito-core-1.10.19.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/objenesis-2.2.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/powermock-mockito-1.6.5-full.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/powermock-api-mockito-common-1.6.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/powermock-module-junit4-rule-1.6.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/classmexer-0.0.3.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/powermock-classloading-base-1.6.5.jar"/>
-	<classpathentry kind="lib" path="lib/powermock-classloading-xstream-1.6.5.jar"/>
-	<classpathentry kind="lib" path="lib/xstream-1.4.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
