Fix TUP-21510 Update PasswordEncryptUtil https://jira.talendforge.org/browse/TUP-21510

--- a/main/plugins/org.talend.librariesmanager/plugin.xml
+++ b/main/plugins/org.talend.librariesmanager/plugin.xml
@@ -42,6 +42,15 @@
             </bundleId>
          </library>
       </systemRoutine>
+            <systemRoutine
+            name="PasswordEncryptUtil">
+         <library
+               name="crypto-utils.jar">
+            <bundleId
+                  bundleId="">
+            </bundleId>
+         </library>
+      </systemRoutine>
    </extension>
    <extension
          point="org.talend.core.runtime.artifact_handler">
