--- a/main/plugins/org.talend.utils/pom.xml
+++ b/main/plugins/org.talend.utils/pom.xml
@@ -11,9 +11,6 @@
 	</parent>
 	<artifactId>org.talend.utils</artifactId>
 	<packaging>eclipse-plugin</packaging>
-	<properties>
-		<org.talend.daikon.crypto-utils.version>1.2.0-SNAPSHOT</org.talend.daikon.crypto-utils.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>commons-codec</groupId>
@@ -55,11 +52,6 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.25</version>
 		</dependency>
-		<dependency>
-			<groupId>org.talend.daikon</groupId>
-			<artifactId>crypto-utils</artifactId>
-			<version>${org.talend.daikon.crypto-utils.version}</version>
-		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -77,6 +69,7 @@
 						</goals>
 						<configuration>
 							<outputDirectory>${project.basedir}/lib</outputDirectory>
+							<destFileName>crypto-utils.jar</destFileName>
 							<artifactItems>
 								<dependency>
 									<groupId>org.talend.daikon</groupId>
@@ -85,17 +78,6 @@
 								</dependency>
 							</artifactItems>
 						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.2</version>
-				<executions>
-					<execution>
-						<id>default-deploy</id>
-						<phase>deploy</phase>
 					</execution>
 				</executions>
 			</plugin>
