--- a/main/plugins/org.talend.librariesmanager/build.properties
+++ b/main/plugins/org.talend.librariesmanager/build.properties
@@ -8,4 +8,5 @@ bin.includes = META-INF/,\
                plugin.properties,\
                model/,\
                templates/,\
-               distribution/license.json
+               distribution/license.json,\
+               lib/crypto-utils.jar
