--- a/main/plugins/org.talend.utils/build.properties
+++ b/main/plugins/org.talend.utils/build.properties
@@ -5,6 +5,6 @@ output.dist/org.talend.utils.jar = class/
 bin.includes = META-INF/,\
                .,\
                dist/,\
-               lib/crypto-utils-1.2.0-SNAPSHOT.jar
+               lib/crypto-utils.jar
 jars.compile.order = .,\
                      dist/org.talend.utils.jar
