--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
 	</parent>
 	<artifactId>tcommon-studio-se</artifactId>
 	<packaging>pom</packaging>
+	<properties>
+		<org.talend.daikon.crypto-utils.version>1.2.0-SNAPSHOT</org.talend.daikon.crypto-utils.version>
+	</properties>
 	<repositories>
 		<repository>
 			<id>talend_open</id>
