--- a/main/plugins/org.talend.librariesmanager/.classpath
+++ b/main/plugins/org.talend.librariesmanager/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="resources/java"/>
+	<classpathentry kind="lib" path="lib/crypto-utils.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
