--- a/main/plugins/org.talend.utils/pom.xml
+++ b/main/plugins/org.talend.utils/pom.xml
@@ -48,14 +48,14 @@
 			<version>0.2.0.RELEASE</version>
 		</dependency>
 		<dependency>
-		  <groupId>org.talend.libraries</groupId>
-		  <artifactId>slf4j-api-1.7.10</artifactId>
-		  <version>6.0.0</version>
+  			<groupId>org.slf4j</groupId>
+  			<artifactId>slf4j-api</artifactId>
+  			<version>1.7.10</version>
 		</dependency>
 		<dependency>
-		  <groupId>org.talend.libraries</groupId>
-		  <artifactId>slf4j-log4j12-1.7.10</artifactId>
-		  <version>6.0.0</version>
+  			<groupId>org.slf4j</groupId>
+  			<artifactId>slf4j-log4j12</artifactId>
+  			<version>1.7.10</version>
 		</dependency>
 	</dependencies>
 	<build>
