Fix TUP-21510 Update PasswordEncryptUtil (#2380)
* Fix TUP-21510 Update PasswordEncryptUtil
https://jira.talendforge.org/browse/TUP-21510

* Fix TUP-21510 Update PasswordEncryptUtil
https://jira.talendforge.org/browse/TUP-21510

* Fix TUP-21510 Update PasswordEncryptUtil
https://jira.talendforge.org/browse/TUP-21510

* Fix TUP-21510 Update PasswordEncryptUtil
https://jira.talendforge.org/browse/TUP-21510

* Fix TUP-21510 Update PasswordEncryptUtil
https://jira.talendforge.org/browse/TUP-21510

* Fix TUP-21510 Update PasswordEncryptUtil
https://jira.talendforge.org/browse/TUP-21510

* Fix TUP-21510 Update PasswordEncryptUtil
https://jira.talendforge.org/browse/TUP-21510

* Fix TUP-21510 Update PasswordEncryptUtil (Update slf4j version)
https://jira.talendforge.org/browse/TUP-21510

--- a/main/plugins/org.talend.librariesmanager/plugin.xml
+++ b/main/plugins/org.talend.librariesmanager/plugin.xml
@@ -42,6 +42,27 @@
             </bundleId>
          </library>
       </systemRoutine>
+            <systemRoutine
+            name="PasswordEncryptUtil">
+         <library
+               name="crypto-utils.jar">
+            <bundleId
+                  bundleId="">
+            </bundleId>
+         </library>
+         <library
+               name="slf4j-api-1.7.10.jar">
+            <bundleId
+                  bundleId="org.talend.libraries.slf4j">
+            </bundleId>
+         </library>
+         <library
+               name="slf4j-log4j12-1.7.10.jar">
+            <bundleId
+                  bundleId="org.talend.libraries.slf4j">
+            </bundleId>
+         </library>   
+      </systemRoutine>
    </extension>
    <extension
          point="org.talend.core.runtime.artifact_handler">
