--- a/main/plugins/org.talend.utils/build.properties
+++ b/main/plugins/org.talend.utils/build.properties
@@ -4,6 +4,7 @@ source.dist/org.talend.utils.jar = src/main/java/
 output.dist/org.talend.utils.jar = class/
 bin.includes = META-INF/,\
                .,\
-               dist/
+               dist/,\
+               lib/crypto-utils.jar
 jars.compile.order = .,\
                      dist/org.talend.utils.jar
