feat(TUP-22631):Ensure CI can be updated. (#2399)
* feat(TUP-22631):Ensure CI can be updated.

* feat(TUP-22631): extract judgment for script cmdline mode.

* feat(TUP-21213):support component update with custom artifact server for
CI.

* feat(TUP-21213):fix bugs and optimize log.

--- a/main/plugins/org.talend.updates.runtime/plugin.xml
+++ b/main/plugins/org.talend.updates.runtime/plugin.xml
@@ -104,5 +104,12 @@
             class="org.talend.updates.runtime.preference.UpdatesRuntimeInitializer">
       </initializer>
    </extension>
+   <extension
+         point="org.talend.core.runtime.service">
+      <Service
+            class="org.talend.updates.runtime.service.UpdateService"
+            serviceId="IUpdateService">
+      </Service>
+   </extension>
 
 </plugin>
