--- a/main/plugins/org.talend.libraries.apache.xml/pom.xml
+++ b/main/plugins/org.talend.libraries.apache.xml/pom.xml
@@ -41,6 +41,11 @@
 									<version>2.6.0</version>
 								</artifactItem>
 								<artifactItem>
+									<groupId>org.apache.xmlbeans</groupId>
+									<artifactId>xmlbeans</artifactId>
+									<version>3.1.0</version>
+								</artifactItem>
+								<artifactItem>
 									<groupId>xerces</groupId>
 									<artifactId>xercesImpl</artifactId>
 									<version>2.4.0</version>
