--- a/main/plugins/org.talend.designer.maven.tos/resources/tcompv1/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/tcompv1/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>component-server</artifactId>
             <version>${tcomp.version}</version>
         </dependency>
+        <!-- istack-commons-runtime is required by component-server-1.1.10, add it manually -->
+        <dependency>
+            <groupId>com.sun.istack</groupId>
+            <artifactId>istack-commons-runtime</artifactId>
+            <version>3.0.8</version>
+        </dependency>
+
         <dependency>
             <groupId>org.talend.sdk.component</groupId>
             <artifactId>component-runtime-di</artifactId>
