--- a/main/plugins/org.talend.designer.maven.tos/resources/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/pom.xml
@@ -13,6 +13,7 @@
         <module>build/pom.xml</module>
         <module>unzip/pom.xml</module>
         <module>components/pom.xml</module>
+        <module>tacokit/pom.xml</module>
         <module>tcompv1/pom.xml</module>
         <module>surefire/pom.xml</module>
         <module>zip/pom.xml</module>
