chore(TDQ-17158): update crypto utils to 1.4.0 (#2511)
* chore(TDQ-17158): update crypto utils to 1.4.0

* better format

--- a/main/plugins/org.talend.utils/pom.xml
+++ b/main/plugins/org.talend.utils/pom.xml
@@ -80,6 +80,7 @@
 									<groupId>org.talend.daikon</groupId>
 									<artifactId>crypto-utils</artifactId>
 									<version>${org.talend.daikon.crypto-utils.version}</version>
+									<overWrite>true</overWrite>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
