--- a/main/plugins/org.talend.librariesmanager/pom.xml
+++ b/main/plugins/org.talend.librariesmanager/pom.xml
@@ -31,6 +31,7 @@
 									<groupId>org.talend.daikon</groupId>
 									<artifactId>crypto-utils</artifactId>
 									<version>${org.talend.daikon.crypto-utils.version}</version>
+									<overWrite>true</overWrite>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
