feat(TDI-40635) add couchbase component

--- a/main/plugins/org.talend.designer.maven.tos/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/pom.xml
@@ -30,6 +30,12 @@
         </dependency>
         <dependency>
             <groupId>org.talend.studio</groupId>
+            <artifactId>studio-tacokit-dependencies</artifactId>
+            <version>${project.version}</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.talend.studio</groupId>
             <artifactId>studio-surefire-dependencies</artifactId>
             <version>${project.version}</version>
             <type>pom</type>
