--- a/main/plugins/org.talend.designer.maven.tos/resources/tacokit/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/tacokit/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>couchbase</artifactId>
 			<version>${tacokit.components.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
