--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>tcommon-studio-se</artifactId>
 	<packaging>pom</packaging>
 	<properties>
-		<org.talend.daikon.crypto-utils.version>1.4.0_Talend</org.talend.daikon.crypto-utils.version>
+		<org.talend.daikon.crypto-utils.version>1.4.0_Studio</org.talend.daikon.crypto-utils.version>
 	</properties>
 	<repositories>
 		<repository>
