--- a/main/plugins/org.talend.libraries.apache.cxf/build.properties
+++ b/main/plugins/org.talend.libraries.apache.cxf/build.properties
@@ -40,4 +40,9 @@ bin.includes = META-INF/,\
                lib/wss4j-ws-security-common-2.1.4.jar,\
                lib/wss4j-ws-security-dom-2.1.4.jar,\
                lib/wss4j-ws-security-policy-stax-2.1.4.jar,\
-               lib/wss4j-ws-security-stax-2.1.4.jar
+               lib/wss4j-ws-security-stax-2.1.4.jar,\
+               lib/javax.activation-1.2.0.jar,\
+               lib/javax.annotation-api-1.3.jar,\
+               lib/jaxb-api-2.2.11.jar,\
+               lib/jaxb-impl-2.1.13.jar,\
+               lib/jaxb-runtime-2.3.2.jar
