fix(TUP-23556): TaCoKit datastore and dataset item not encrypt the password https://jira.talendforge.org/browse/TUP-23556

--- a/main/plugins/org.talend.designer.maven.tos/resources/tcompv1/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/tcompv1/pom.xml
@@ -83,6 +83,11 @@
         </dependency>
         <dependency>
             <groupId>org.talend.sdk.component</groupId>
+            <artifactId>component-api</artifactId>
+            <version>${tcomp.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.talend.sdk.component</groupId>
             <artifactId>slf4j-standard</artifactId>
             <version>${tcomp.version}</version>
         </dependency>
