feat(TUP-24717):Activate/Deactivate plugins when install patch/update (#2811)
* feat(TUP-24717):Activate/Deactivate plugins when install patch/update

* feat(TUP-24718):Limit the size of studio when install updates.

* feat(TUP-24719):Studio updates need to install new components by
project/license type

* feat(TUP-24718): Copy signature file to configuration directory

* feat(TUP-25187):Activate new/remove old third-party bundles from studio
after upgrade to new version

* feat(TUP-25187):fix several bugs.

* feat(TUP-25187):fix drop list format.

--- a/main/plugins/org.talend.updates.runtime/plugin.xml
+++ b/main/plugins/org.talend.updates.runtime/plugin.xml
@@ -60,6 +60,10 @@
             class="org.talend.updates.runtime.login.SyncComponentMavenRepoLoginTask"
             priority="normal">
       </loginTask>
+      <loginTask
+            class="org.talend.updates.runtime.login.CleanupDropBundlesLoginTask"
+            priority="lowest">
+      </loginTask>
    </extension>
    <extension
          point="org.eclipse.core.runtime.preferences">
