TUP-22573 [CVE:high] Backend : pkg:maven/org.apache.cxf:cxf-api:2.7.7 requires version upgrade (#2589)
* TUP-22573 [CVE:high] Backend : pkg:maven/org.apache.cxf:cxf-api:2.7.7
requires version upgrade
https://jira.talendforge.org/browse/TUP-22573

--- a/main/plugins/org.talend.libraries.apache.cxf/build.properties
+++ b/main/plugins/org.talend.libraries.apache.cxf/build.properties
@@ -1,40 +1,11 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/neethi-3.0.1.jar,\
-               lib/cxf-api-2.7.7.jar,\
-               lib/cxf-rt-bindings-xml-2.7.7.jar,\
-               lib/cxf-rt-core-2.7.7.jar,\
-               lib/cxf-rt-frontend-jaxrs-2.7.7.jar,\
-               lib/cxf-rt-transports-http-2.7.7.jar,\
-               lib/stax2-api-3.1.1.jar,\
-               lib/woodstox-core-asl-4.2.0.jar,\
-               lib/javax.ws.rs-api-2.0-m10.jar,\
                plugin.xml,\
                lib/stax2-api-3.1.4.jar,\
                lib/woodstox-core-asl-4.4.1.jar,\
                lib/xmlschema-core-2.2.1.jar,\
                lib/commons-codec-1.10.jar,\
-               lib/cxf-core-3.1.4.jar,\
-               lib/cxf-rt-bindings-soap-3.1.4.jar,\
-               lib/cxf-rt-bindings-xml-3.1.4.jar,\
-               lib/cxf-rt-databinding-jaxb-3.1.4.jar,\
-               lib/cxf-rt-databinding-xmlbeans-3.1.4.jar,\
-               lib/cxf-rt-frontend-jaxrs-3.1.4.jar,\
-               lib/cxf-rt-frontend-jaxws-3.1.4.jar,\
-               lib/cxf-rt-frontend-simple-3.1.4.jar,\
-               lib/cxf-rt-rs-client-3.1.4.jar,\
-               lib/cxf-rt-security-3.1.4.jar,\
-               lib/cxf-rt-transports-http-3.1.4.jar,\
-               lib/cxf-rt-transports-http-jetty-3.1.4.jar,\
-               lib/cxf-rt-ws-addr-3.1.4.jar,\
-               lib/cxf-rt-ws-mex-3.1.4.jar,\
-               lib/cxf-rt-ws-policy-3.1.4.jar,\
-               lib/cxf-rt-ws-rm-3.1.4.jar,\
-               lib/cxf-rt-ws-security-3.1.4.jar,\
-               lib/cxf-rt-wsdl-3.1.4.jar,\
-               lib/cxf-services-sts-core-3.1.4.jar,\
-               lib/cxf-tools-common-3.1.4.jar,\
                lib/wss4j-bindings-2.1.4.jar,\
                lib/wss4j-policy-2.1.4.jar,\
                lib/wss4j-ws-security-common-2.1.4.jar,\
@@ -42,7 +13,16 @@ bin.includes = META-INF/,\
                lib/wss4j-ws-security-policy-stax-2.1.4.jar,\
                lib/wss4j-ws-security-stax-2.1.4.jar,\
                lib/javax.activation-1.2.0.jar,\
-               lib/javax.annotation-api-1.3.jar,\
-               lib/jaxb-api-2.2.11.jar,\
-               lib/jaxb-impl-2.1.13.jar,\
-               lib/jaxb-runtime-2.3.2.jar
+               lib/jaxws-api-2.3.1.jar,\
+               lib/cxf-core-3.3.4.jar,\
+               lib/cxf-rt-bindings-xml-3.3.4.jar,\
+               lib/cxf-rt-frontend-jaxrs-3.3.4.jar,\
+               lib/cxf-rt-rs-client-3.3.4.jar,\
+               lib/cxf-rt-transports-http-3.3.4.jar,\
+               lib/jakarta.ws.rs-api-2.1.5.jar,\
+               lib/neethi-3.1.1.jar,\
+               lib/javax.annotation-api-1.3.2.jar,\
+               lib/jaxb-runtime-2.3.2.jar,\
+               lib/jakarta.xml.bind-api-2.3.2.jar,\
+               lib/jakarta.activation-api-1.2.1.jar,\
+               lib/cxf-rt-wsdl-3.3.4.jar
