--- a/main/plugins/org.talend.libraries.apache.cxf/.classpath
+++ b/main/plugins/org.talend.libraries.apache.cxf/.classpath
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/javax.ws.rs-api-2.0-m10.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/neethi-3.0.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/cxf-api-2.7.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-bindings-xml-2.7.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-core-2.7.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-frontend-jaxrs-2.7.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-transports-http-2.7.7.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/stax2-api-3.1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/woodstox-core-asl-4.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-wsdl-3.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jakarta.activation-api-1.2.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jakarta.xml.bind-api-2.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxb-runtime-2.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/woodstox-core-asl-4.4.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/javax.annotation-api-1.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/stax2-api-3.1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/neethi-3.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jakarta.ws.rs-api-2.1.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cxf-core-3.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-bindings-xml-3.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-frontend-jaxrs-3.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-rs-client-3.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/cxf-rt-transports-http-3.3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jaxws-api-2.3.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="output" path="bin"/>
