--- a/main/plugins/org.talend.libraries.apache.cxf/build.properties
+++ b/main/plugins/org.talend.libraries.apache.cxf/build.properties
@@ -25,4 +25,5 @@ bin.includes = META-INF/,\
                lib/jaxb-runtime-2.3.2.jar,\
                lib/jakarta.xml.bind-api-2.3.2.jar,\
                lib/jakarta.activation-api-1.2.1.jar,\
-               lib/cxf-rt-wsdl-3.3.4.jar
+               lib/cxf-rt-wsdl-3.3.4.jar,\
+               lib/jakarta.activation-1.2.1.jar
