Fix TUP-25241 Online Help in studio - Setup online Help https://jira.talendforge.org/browse/TUP-25241

--- a/main/plugins/org.talend.help.external/build.properties
+++ b/main/plugins/org.talend.help.external/build.properties
@@ -2,4 +2,7 @@ source.. = src/main/java/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               community_tools.xml,\
+               inlinehelp_context.xml,\
+               thc.xml
